--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     background-color: rgb(4, 4, 4);
     text-align: center;
     font-family: "Trebuchet MS", Helvetica, sans-serif; 
-}   
+    }   
 
 .headerDark {
     background-color: rgb(28, 9, 37);
@@ -41,7 +41,7 @@
     font-size: 22px;
     text-align: left;
     font-family: "Trebuchet MS", Helvetica, sans-serif; 
-        }
+    }
 
 .bottomHeader {
     overflow: hidden;
@@ -87,7 +87,7 @@
     background-color: #222222; 
     }
 
-.table{
+.table {
     width: 35%;
     float: right;
     margin-right: 50px;
@@ -96,30 +96,35 @@
     background-color: #222222;
     color: #ffffff;
     text-align: left;
-    font-family: "Trebuchet MS", Helvetica, sans-serif;}
-
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    }
 .th, td {
     padding: 8px;
     text-align: left;
     border: 2px solid #610b97;
     }
 
-.th, td:hover{
+.th, td:hover {
     background-color: #393939;
-}
+    }
+
+.a{
+    color: #ffffff;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    }
 
 .blink {
     animation: blink 10s infinite;
-  }
+    }
   
-  @keyframes blink {
+@keyframes blink {
     50% {
       opacity: 1;
     }
     50% {
       opacity: 0;
     }
-  }
+    }
 
 .center {
     margin-top: 50px;
